--- a/stdlib-workspace/isonlaxman/donate/package.json
+++ b/stdlib-workspace/isonlaxman/donate/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "author": "isonlaxman <inos1199@gmail.com>",
   "main": "functions/__main__.js",
-  "dependencies": {},
+  "dependencies": {
+    "stripe": "^6.14.0"
+  },
   "private": true,
   "stdlib": {
     "build": "faaslang",
