--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "datamaps": "^0.5.9",
+    "python-shell": "^1.0.6",
     "request": "^2.88.0",
     "stripe": "^6.14.0"
   }
